Update text minta maaf

--- a/index.html
+++ b/index.html
@@ -477,10 +477,9 @@
         </div>
         <div class="myheader" id="mywindowheader">Halo <span id="spannama"></span></div>
         <div class="mybody">
-          <div class="mytitle">Aku minta maaff ya sayang.</div>
+          <div class="mytitle">Haii Cantik.</div>
           <div class="mycontent">
-            maafinnn akuuu yaa?? maafinn akuu yaa udaa buatt kamuu ngambekkk. akuu tidaa mau kamuu ngambekk ngambekk
-            kayaa ginii, akuu tidaa sukaa ☹️☹️ jadii tolongg jangann ngambekk lagii, kitaa happy happy lagii yaa?
+            Kamu lucu, mau ga jadi pacarku? Gamau? Yaudah, aku aja yang jadi pacarmu😍
           </div>
           <div class="mybutton">
             <div class="mybuttonno" onmouseover="move()" onclick="move2()">TIDAK</div>
