--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
       function init() {
         startTime();
         stopOpening();
-        add = '<a target="_blank"><div class="cc">for andinnn ❤️</div></a>';
+        add = '<a target="_blank"><div class="cc">for iraaa ❤️</div></a>';
         $("body").append(add);
         if (localStorage.getItem("nama") != null && localStorage.getItem("checked") == "yoi") {
           namaku = localStorage.getItem("nama");
