--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
             Kamu lucu, mau ga jadi pacarku? Gamau? Yaudah, aku aja yang jadi pacarmu😍
           </div>
           <div class="mybutton">
-            <div class="mybuttonno" onmouseover="move()" onclick="move2()">TIDAK</div>
-            <div class="mybuttonyes" onclick="playVid()">IYA</div>
+            <div class="mybuttonno" onmouseover="move()" onclick="move2()">gak</div>
+            <div class="mybuttonyes" onclick="playVid()">mwww</div>
           </div>
         </div>
         <div class="myresize"></div>
